--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/0anto/Desktop/Progetto OO/lib/postgresql-42.7.8.jar"/>
+	<classpathentry kind="lib" path="lib/jfreechart-1.5.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
