--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/0anto/Desktop/Progetto OO/lib/postgresql-42.7.8.jar"/>
 	<classpathentry kind="lib" path="lib/jfreechart-1.5.4.jar"/>
+	<classpathentry kind="lib" path="lib/postgresql-42.7.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
